Configure application for Railway deployment